Fix configuration for statefile

--- a/etc/rsyslog.conf
+++ b/etc/rsyslog.conf
@@ -1,6 +1,6 @@
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 
-module(load="imjournal" StateFile=/rootfs/var/log/syslog.statefile)
+module(load="imjournal" StateFile="/rootfs/var/log/syslog.statefile")
 
 $outchannel log_rotation, /rootfs/var/log/syslog, 10485760, /usr/bin/logrotate.sh
 
